# nyaru-clipper

./: .gitignore  DESIGN.md  LICENSE  README.md
.sisyphus/: boulder.json
.sisyphus/drafts/: bilibili-vtuber-suite-spec.md
.sisyphus/plans/: asr-cancel-observability.md  bilibili-vtuber-suite-mvp.md  chinese-web-ui.md  ui-usability-status-recovery.md  uv-pip-rocm-deployment-migration.md  wsl-rocm-support.md
.superpowers/sdd/: task-10-report.md  task-6-report.md  task-7-report.md
backend/: README.md  alembic.ini  pyproject.toml  requirements-linux-cuda.txt  requirements-wsl-rocm.txt  requirements.txt  sitecustomize.py
backend/alembic/: env.py
backend/alembic/versions/: 20260712_01_workstation_foundation.py  20260712_02_workstation_events.py  20260714_01_optional_highlight_filtering.py
backend/app/: db.py  db_migrations.py  main.py  models.py  paths.py  runtime_doctor.py  settings.py  worker.py
backend/app/api/routes/: __init__.py  health.py  runtime.py  tasks.py  workstation_events.py  workstation_queue.py  workstation_sources.py  workstation_tasks.py
backend/app/api/schemas/: __init__.py  workstation.py
backend/app/repositories/: tasks.py  workstation.py
backend/app/services/: asr_child_runner.py  asr_whisperx.py  capability_checks.py  cleanup.py  clip_export.py  downloader.py  export_encoding.py  failure_codes.py  highlight_scoring.py  highlights.py  media_chunks.py  media_prep.py  pipeline_support.py  proofread_deepseek.py  recovery_actions.py  reporting.py  runtime_capabilities.py  runtime_diagnostics.py  runtime_profile.py  scene_detection.py  source_catalog.py  storage.py  subtitles.py  task_control.py  task_library_lifecycle.py  task_runner.py  translation_hf.py  translation_provider.py  workstation_events.py  workstation_queue.py  workstation_runs.py
backend/tests/: test_asr_whisperx.py  test_bilingual_subtitles.py  test_cleanup.py  test_clip_export.py  test_clip_export_api.py  test_downloader.py  test_e2e_pipeline.py  test_export_encoding.py  test_highlights.py  test_media_chunks.py  test_media_prep.py  test_pipeline_support.py  test_proofread_deepseek.py  test_pytest_environment.py  test_reporting.py  test_requirements_export.py  test_retry_api.py  test_retry_resume.py  test_runtime_api.py  test_runtime_capabilities.py  test_runtime_doctor.py  test_schema_migration.py  test_settings.py  test_smoke.py  test_startup_local_dev.py  test_storage_layout.py  test_subtitles.py  test_task_control_runner_state.py  test_task_execution_progress_repo.py  test_task_runner.py  test_tasks_api.py  test_translation_failure_codes.py  test_translation_hf.py  test_worker_runtime_warnings.py
backend/tests/workstation/: test_domain_migration.py  test_event_stream.py  test_queue_api.py  test_queue_service.py  test_run_projection.py  test_source_catalog.py  test_task_create_api.py  test_task_library_api.py  test_task_library_repository.py
docs/: README.md  README.zh-CN.md  deployment-guide.md  deployment-guide.zh-CN.md  operator-manual.md  operator-manual.zh-CN.md  processing-flow.md  processing-flow.zh-CN.md  user-manual.md  user-manual.zh-CN.md  wireframes.md  wireframes.zh-CN.md  wsl-rocm-investigation.zh-CN.md
infra/: docker-compose.yml
infra/docker/: api.Dockerfile  web.Dockerfile
scripts/: README.md  _backend_profile_common.sh  _dev_common.sh  _release_smoke_common.sh  build_ctranslate2_wsl_rocm.sh  check_wsl_rocm.sh  dev_api.sh  dev_up.sh  dev_web.sh  dev_worker.sh  export_backend_requirements.sh  export_openapi_schema.py  install_backend_linux_cuda.sh  install_backend_wsl_rocm.sh  release_smoke.sh  release_smoke_docker.sh  release_smoke_non_docker.sh  release_smoke_wsl_rocm.sh  seed_failure_fixture.py
web/: index.html  openapi.json  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
web/e2e/: task-detail.spec.ts  task-flow.spec.ts  task-library-controls.spec.ts  task-submit.spec.ts  workspace.spec.ts  (+4 more)
web/src/: App.tsx  (+3 more)
(+101 files in other folders)
