[project]
name = "bilibili-vtuber-suite-backend"
version = "0.1.0"
description = "Minimal FastAPI backend scaffold for the Bilibili VTuber suite"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
  "orjson>=3.10.0,<4.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "scenedetect[opencv-headless]>=0.6.0,<0.7.0",
  "sqlmodel>=0.0.22,<0.1.0",
  "torch",
  "transformers>=4.46.0,<5.0.0",
  "whisperx",
  "uvicorn[standard]>=0.32.0,<1.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
