[project]
name = "bilibili-vtuber-suite-backend"
version = "0.1.0"
description = "Minimal FastAPI backend scaffold for the Bilibili VTuber suite"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "alembic>=1.14.0,<2.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
  "orjson>=3.10.0,<4.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "scenedetect[opencv-headless]>=0.6.0,<0.7.0",
  "sqlmodel>=0.0.22,<0.1.0",
  "transformers>=4.46.0,<5.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
]
linux-cuda = [
  "torch==2.8.0",
  "torchaudio==2.8.0",
  "torchvision==0.23.0",
  "whisperx==3.8.5",
]

[tool.nyaru.backend-accelerator-profiles]
accelerator-roots = ["torch", "whisperx"]

[tool.nyaru.backend-accelerator-profiles.wsl-rocm]
extra-index-url = "https://download.pytorch.org/whl/rocm6.4"
requirements = [
  "torch==2.8.0",
  "torchaudio==2.8.0",
  "torchvision==0.23.0",
  "whisperx==3.8.5",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
