[project]
name = "bilibili-vtuber-suite-backend"
version = "0.1.0"
description = "Minimal FastAPI backend scaffold for the Bilibili VTuber suite"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "alembic>=1.14.0,<2.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
  "orjson>=3.10.0,<4.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "scenedetect[opencv-headless]>=0.6.0,<0.7.0",
  "sqlmodel>=0.0.22,<0.1.0",
  "transformers>=4.46.0,<5.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
]
linux-cuda = [
  "torch==2.8.0",
  "torchaudio==2.8.0",
  "torchvision==0.23.0",
  "whisperx==3.8.5",
]

[tool.nyaru.backend-accelerator-profiles]
accelerator-roots = ["torch", "whisperx"]

[tool.nyaru.backend-accelerator-profiles.wsl-rocm]
extra-index-url = "https://repo.radeon.com/rocm/manylinux/rocm-rel-7.2"
requirements = [
  "torch @ https://repo.radeon.com/rocm/manylinux/rocm-rel-7.2/torch-2.8.0%2Brocm7.2.0.lw.gitbf943426-cp311-cp311-linux_x86_64.whl",
  "torchaudio @ https://repo.radeon.com/rocm/manylinux/rocm-rel-7.2/torchaudio-2.8.0%2Brocm7.2.0.git6e1c7fe9-cp311-cp311-linux_x86_64.whl",
  "torchvision @ https://repo.radeon.com/rocm/manylinux/rocm-rel-7.2/torchvision-0.23.0%2Brocm7.2.0.git824e8c87-cp311-cp311-linux_x86_64.whl",
  "triton @ https://repo.radeon.com/rocm/manylinux/rocm-rel-7.2/triton-3.4.0%2Brocm7.2.0.git0cace8d2-cp311-cp311-linux_x86_64.whl",
  "whisperx==3.8.5",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
